<?xml version="1.0" encoding="utf-8" ?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="3"
    android:columnCount="2"
    android:id="@+id/root"
    tools:context="wh.self.searchpic.MainActivity" >

    <TextView
        android:id="@+id/test_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:textSize="50sp"
        android:text="@string/hello_world" />
		<!--
		android:layout_marginLeft="2dp"
		android:layout_marginRight="2dp"
		android:padding="3dp"
		android:layout_gravity="end"
		android:background="#eee"
		android:textColor="#000"
		-->
    
    <Button 
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:text="@string/choose" />
    
    <Button 
        android:id="@+id/set"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:text="@string/setting" />
    
     <Button 
        android:id="@+id/photo"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:text="@string/photo" />
     
     <Button 
        android:id="@+id/adv"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:text="@string/adv" />
      
</GridLayout>
